k8s/frontend/frontend-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-nodeport
  namespace: default
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
    protocol: TCP
    name: http
  selector:
    app: frontend
